Addressed comments. This includes:
- Moved Status enum to ChangeRequestInfo.
- Switching from ChangeRequest.builer() to ChangeRequestInfo.builder()
- Fixing README accordingly
- Used times() for mocking instead of repeated expect()
- Snippets and documentation work with ChangeRequestInfo. Fixes #788.
- Equals uses getClass instead if instanceof.
- Removed unnecessary imports.